@@ -6,6 +6,7 @@ following names for their contribution to the product.
 * Alexandre Emsenhuber
 * Aryeh Gregor
 * Brion Vibber
+* Bryan Tong Minh
 * Chad Horohoe
 * Greg Sabino Mullane
 * Hojjat
